fix text alignment of exhibit overview

--- a/app/assets/stylesheets/_elite.scss
+++ b/app/assets/stylesheets/_elite.scss
@@ -42,6 +42,11 @@ h1.elite {
     text-align: left;
     width: 200px;
   }
+  @media screen and (min-width: 768px) {
+    dd {
+      margin-left: 200px;
+    }
+  }
 }
 #exhibit-navigation {
   height: 50px;
